- If you are respectivly subscribed to TTS events for voice and media files subscriptions, you are now informed by TTS message when you change volume for one of this elements for an user by shortcuts ctrl+maj+arrow keys and ctrl+alt+arrow keys
- When you are in main channel, window's title is now Server name - TeamTalk version
Default Qt client
- Removed duplex mode for sound devices
- Sound system Windows Audio Session now uses Windows' own echo cancellor, AGC and noise suppression
- Text message log files are stored with .clog and .ulog extension for channel and user log respectively
- Press tab changes focus in text message dialog
- More items are now translatables. French translation has been updated. Translators, you are invited to check ts files to update your translations with new strings.
- More elements are now labellize, specificly in main's window.
- When you switch to Away mode due to your inactivity, your status message is now updated
- Blank nicknames are set to NoName followed by user ID
- When you are in main channel, window's title is now Server name - TeamTalk version
Android client
- Empty channels with max users set to zero are listed first (sticky channels)
- French's language is now supported
- Buttons for changing between tabs Channels, Chat, Media Streams and Files
- Preferences are grouped into General, Sound Events, Text to Speech, Connection and Sound System
- Users are now displayed before channels
- Support for dark mode and day/night shift
- Blank nicknames are set to NoName followed by user ID
- More elements are now labeled, specifically some edit fields
- Bluetooth headset microphone usage facility
- Use back button to navigate to the parent channel
iOS client
- Channels are now sorted correctly in TeamTalk on iOS 13 and newer
- French translation has been updated
- Blank nicknames are set to NoName followed by user ID

Version 5.5.1, 2020/05/03
Accessible Windows client
- Fixed crash issue when opening stream media file dialog
